fixed overflow in view

--- a/less/styles.less
+++ b/less/styles.less
@@ -37,6 +37,9 @@ header{
 }
 main{
   background-color:lighten(@header-bg,5%);
+  height:100%;
+  overflow-y:auto;
+  overflow-x:hidden;
 }
 .task-list{
   .no-space;
